# ft-raxml-ng

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
benchmark/src/: BenchmarkCompression.cpp  CMakeLists.txt
libs/: CMakeLists.txt
scripts/: .gitignore  callsPerSecondFigures.R  collect.sh  failure-schedule-generator.py  fh2-failure-simulation.py  ft-evaluation.R  profile.py  profilingFigures.R  rebalancing-evaluation.R  test_runner.sh  ulfm-performance-implications.R
src/: CMakeLists.txt  Checkpoint.cpp  Checkpoint.hpp  CommandLineParser.cpp  MSA.hpp  MSACompression.cpp  MSACompression.hpp  Model.cpp  Model.hpp  Optimizer.cpp  Options.hpp  ParallelContext.cpp  ParallelContext.hpp  Profiler.cpp  Profiler.hpp  ReStoreMSAWrapper.hpp  TreeInfo.cpp  TreeInfo.hpp  common.h  log.cpp  log.hpp  main.cpp
src/io/: binary_io.cpp
test/: writeStatsReference.proFile.csv
test/data/: another.newick  elaborate.newick  simple.newick  simple_rooted.newick
test/src/: CMakeLists.txt  MSACompressionTest.cpp  ProfilerTest.cpp  RaxmlTest.hpp  ReStoreIntegrationTest.cpp
